--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>日韓共同研究 成果サイト</title>
+  <title>日韓共同研究</title>
   <meta name="description" content="日韓共同研究の成果をまとめたWebサイト" />
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -12,7 +12,7 @@
   <div class="wrap">
     <header class="topbar">
       <div class="title">
-        <h1 data-i18n="site_title">日韓共同研究 成果サイト 🇯🇵🤝🇰🇷</h1>
+        <h1 data-i18n="site_title">日韓共同研究</h1>
         <p data-i18n="site_subtitle">左右に両校の概要を並べ、ボタンにホバーで詳細が表示されます。</p>
       </div>
 
@@ -35,9 +35,9 @@
         <h2 data-i18n="kr_school_name">韓国側の高校名（ここを書き換え）</h2>
 
         <div class="meta">
-          <span class="chip" data-i18n="kr_chip_location">所在地：例）Seoul</span>
+          <span class="chip" data-i18n="kr_chip_location">所在地：</span>
           <span class="chip" data-i18n="kr_chip_field">分野：例）Science / Engineering</span>
-          <span class="chip" data-i18n="kr_chip_team">参加チーム：例）2 teams</span>
+          <span class="chip" data-i18n="kr_chip_team">参加メンバー：</span>
         </div>
 
         <div class="section">
@@ -70,16 +70,9 @@
             <a class="btn" href="#members" data-i18n="btn_members">メンバー</a>
             <div class="hover-detail">
               <strong data-i18n="tip_members_title">参加者</strong>
-              <p data-i18n="tip_members_text">生徒・指導教員・協力機関（必要なら）を簡潔に掲載。👥</p>
+              <p data-i18n="tip_members_text">name</p>
             </div>
           </div>
-
-          <div class="hover-wrap">
-            <a class="btn" href="#contact" data-i18n="btn_contact">連絡</a>
-            <div class="hover-detail">
-              <strong data-i18n="tip_contact_title">問い合わせ</strong>
-              <p data-i18n="tip_contact_text">外部公開ならメールは画像化かフォームが安全。✉️🔒</p>
-            </div>
           </div>
         </div>
       </section>
@@ -87,12 +80,12 @@
       <!-- 右：日本 -->
       <section class="card jp" aria-label="Japanese High School Overview">
         <div class="badge"><span class="flag">🇯🇵</span> <span data-i18n="jp_badge">Japan / 高校概要</span></div>
-        <h2 data-i18n="jp_school_name">日本側の高校名（ここを書き換え）</h2>
+        <h2 data-i18n="jp_school_name">都立科学技術高等学校</h2>
 
         <div class="meta">
-          <span class="chip" data-i18n="jp_chip_location">所在地：例）Tokyo</span>
-          <span class="chip" data-i18n="jp_chip_field">分野：例）Science & Tech</span>
-          <span class="chip" data-i18n="jp_chip_team">参加チーム：例）1 team</span>
+          <span class="chip" data-i18n="jp_chip_location">所在地：Tokyo</span>
+          <span class="chip" data-i18n="jp_chip_field">分野：Science & Tech</span>
+          <span class="chip" data-i18n="jp_chip_team">参加メンバー：鈴鹿泰正、島村真央</span>
         </div>
 
         <div class="section">
@@ -125,16 +118,10 @@
             <a class="btn" href="#members" data-i18n="btn_members">メンバー</a>
             <div class="hover-detail">
               <strong data-i18n="tip_members_title">参加者</strong>
-              <p data-i18n="tip_members_text">担当範囲や役割を添えると共同研究っぽさが出る。✅</p>
+              <p data-i18n="tip_members_text">鈴鹿泰正、島村真央</p>
             </div>
           </div>
 
-          <div class="hover-wrap">
-            <a class="btn" href="#contact" data-i18n="btn_contact">連絡</a>
-            <div class="hover-detail">
-              <strong data-i18n="tip_contact_title">問い合わせ</strong>
-              <p data-i18n="tip_contact_text">公開範囲に応じて連絡先を調整（学校代表/フォーム推奨）。🔒</p>
-            </div>
           </div>
         </div>
       </section>
@@ -144,16 +131,6 @@
     <section id="research" class="below">
       <h2 data-i18n="section_research_title">研究内容（Research）</h2>
       <p class="below-muted" data-i18n="section_research_text">ここに「目的→方法→結果→考察→今後」を入れていく。図表を置くならここ。📊</p>
-    </section>
-
-    <section id="members" class="below">
-      <h2 data-i18n="section_members_title">メンバー（Members）</h2>
-      <p class="below-muted" data-i18n="section_members_text">役割（例：実験、解析、実装、発表）を並べると強い。👥</p>
-    </section>
-
-    <section id="contact" class="below">
-      <h2 data-i18n="section_contact_title">連絡（Contact）</h2>
-      <p class="below-muted" data-i18n="section_contact_text">外部公開ならフォームが安全。学校窓口や担当の案内をここに。✉️</p>
     </section>
 
     <footer>
